<resources>
    <string name="app_name">Woof Woof stores</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_dog_food">Buy Dog Food</string>
    <string name="menu_about">About</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_my_cart">My Cart</string>

    <string name="dummy_text" translatable="true">We sell dogs and dog food at a nice and reasonable price. \nCome and patronize us o.
            \nWe sell dogs and dog food at a nice and reasonable price. \nCome and patronize us o.
            \nWe sell dogs and dog food at a nice and reasonable price. \nCome and patronize us o.
            \nWe sell dogs and dog food at a nice and reasonable price. \nCome and patronize us o.
            \n\nWe sell dogs and dog food at a nice and reasonable price. \nCome and patronize us o.</string>
    <string name="reduceQuantity"><![CDATA[<]]></string>
    <string name="increaseQuantity"><![CDATA[>]]></string>

</resources>
