<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.inspiredcoda.woofwoofstores.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.inspiredcoda.woofwoofstores.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_buy_dog_food"
        android:name="com.inspiredcoda.woofwoofstores.ui.buydogfood.BuyDogFoodFragment"
        android:label="@string/menu_dog_food"
        tools:layout="@layout/fragment_buy_dog_food" />

    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.inspiredcoda.woofwoofstores.ui.cart.CartFragment"
        android:label="@string/menu_my_cart"
        tools:layout="@layout/fragment_cart"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.inspiredcoda.woofwoofstores.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.inspiredcoda.woofwoofstores.ui.contactus.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />

</navigation>